# metric-hub

./: .gitignore  404.html  CODEOWNERS  README.md  firefox-accounts-toolbar-button-default-visibility-new-users-part-2.toml  index.html  onboarding-welcome-video-experiment-part-2.toml  sitemap.xml
.circleci/: config.yml  validation-config.yml
.docs/: mkdocs.yml
.github/: dependabot.yml  pull_request_template.md
.script/: generate_docs.py  requirements.txt  validate.py
definitions/: README.md  ads.toml  cross_product.toml  external.toml  fenix.toml  firefox_desktop.toml  firefox_ios.toml  focus_android.toml  focus_android.toml.orig  focus_ios.toml  functions.toml  klar_android.toml  klar_ios.toml  monitor_cirrus.toml  multi_product.toml
featmon/: firefox_desktop.toml
functions/: index.html
jetstream/: 1-callout-contextual-chatbot-suggestion.toml  1-click-pin-experiment.toml  1-click-set-to-default-existing-users.toml  10-shortcuts-per-row.toml  106-major-release-firefox-existing-user-experience.toml  106-major-release-firefox-new-user.toml  3rd-party-cookie-deprecation.toml  48hr-os-notification-for-churned-resurrected-users.toml  README.md  Showing thumbs up-down button on the pocket newtab recs (Holdback)  about-welcome-add-sign-in-buttons-to-all-screens-100.toml  about-welcome-remove-import-screens.toml  abouthome-startup-cache-3.toml  abouthome-startup-cache-5.toml  account-adoption-callout-credit-cards-and-addresses-corrected-copy.toml  account-adoption-callout-passwords-early-day-relaunch.toml  account-adoption-callout-passwords-existing-users-relaunch.toml  account-spotlight-modal-english-holdback-esr.toml  account-spotlight-modal-english-holdback.toml  accounts-vpn-promotion  accounts-vpn-promotion.toml  adaptive-autofill-revamp.toml  add-an-image-to-pdf-with-alt-text.toml  addon-recommendations-in-nuo.toml  address-autofill-phase-2-holdback-experiment-expansion-de-fr-copy.toml  address-bar-update-donoharm.toml  address-bar-update-launch-extention.toml  address-bar-update-launch-hold.toml  ai-chatbot-page-summarization-mvp.toml  ai-tab-groups-experiment-with-opt-in-100-population.toml  (+322 more)
lib/mcp-server/: .gitignore  Dockerfile  EXAMPLES.md  README.md  SETUP.md  install.sh  pyproject.toml
lib/mcp-server/.claude/: settings.local.json
lib/mcp-server/metric_hub_mcp/: __init__.py  config.py  experimenter.py  experiments.py  featmon.py  funnels.py  metrics.py  server.py
lib/mcp-server/tests/: __init__.py  test_server.py
lib/metric-config-parser/: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py  tox.ini
lib/metric-config-parser/jetstream_config_parser_env/: pyvenv.cfg
lib/metric-config-parser/metric_config_parser/: __init__.py  alert.py  analysis.py  cli.py  config.py  data_source.py  definition.py  dimension.py  errors.py  experiment.py  exposure_signal.py  featmon.py  function.py  metric.py  metric_group.py  monitoring.py  nimbus_feature_monitoring.py  outcome.py  parameter.py  population.py  pre_treatment.py  project.py  segment.py  sql.py  statistic.py  util.py
lib/metric-config-parser/metric_config_parser/templates/: data_source_macros.j2  data_source_query.sql  metrics_query.sql
lib/metric-config-parser/metric_config_parser/tests/: conftest.py  test_alert.py  test_analysis.py  test_config.py  test_experiment.py  test_function.py  test_metric.py  test_monitoring.py  test_outcomes.py  test_parameter.py  test_population.py  test_project.py  test_segments.py  test_sql.py
lib/metric-config-parser/metric_config_parser/tests/data/definitions/: firefox_desktop.toml  functions.toml
lib/metric-config-parser/metric_config_parser/tests/data/jetstream/defaults/: firefox_desktop.toml
lib/metric-config-parser/metric_config_parser/tests/data/jetstream/outcomes/firefox_desktop/: parameterized.toml  parameterized_distinct_by_branch_config.toml  performance.toml  tastiness.toml
lib/metric-config-parser/metric_config_parser/tests/integration/: test_config_integration.py
lib/metric-config-parser/metric_config_parser/tests/sql/: test_generate_data_source.expected.sql  test_generate_data_source_with_join.expected.sql  test_generate_data_source_with_multi_join.expected.sql  test_generate_query_multiple_metrics.expected.sql  test_generate_query_single_metric.expected.sql  test_generate_query_with_joined_data_sources.expected.sql  test_generate_query_with_multiple_metrics_different_data_sources.expected.sql  test_generate_query_with_null_client_id.expected.sql  test_generate_query_with_parameters.expected.sql  test_generate_query_without_client_id.expected.sql
lib/metric-config-parser/script/: update_deps
(+230 files in other folders)
