[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metric-hub-mcp-server"
version = "0.1.0"
description = "MCP server for Mozilla Metric Hub - query, create, and validate metrics"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Mozilla Corporation", email = "fx-data-dev@mozilla.org"}
]
dependencies = [
    "mcp>=1.0.0",
    "mozilla-metric-config-parser>=2024.11.1",
    "attrs>=23.0.0",
    "cattrs>=23.0.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
metric-hub-mcp = "metric_hub_mcp.server:cli"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
